--- a/imagenes bestialc 2013.html
+++ b/imagenes bestialc 2013.html
@@ -27,13 +27,12 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
-
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
@@ -48,79 +47,52 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>18º Bestialc (2013)</h2>
-        <a href="imagenes/18%20bestialc%202013/00.jpg"> <img src="imagenes/18%20bestialc%202013/00.jpg"
-
+        <a href="imagenes/18%20bestialc%202013/00.jpg"> <img src="imagenes/18%20bestialc%202013/00.jpg"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/01.JPG">
-          <img src="imagenes/18%20bestialc%202013/01.JPG" alt="foto2"> </a> <a
-
-          href="imagenes/18%20bestialc%202013/02.JPG"> <img src="imagenes/18%20bestialc%202013/02.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/01.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/02.JPG"> <img src="imagenes/18%20bestialc%202013/02.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/03.jpg">
-          <img src="imagenes/18%20bestialc%202013/03.jpg" alt="foto2"> </a> <a
-
-          href="imagenes/18%20bestialc%202013/04.jpg"> <img src="imagenes/18%20bestialc%202013/04.jpg"
-
+          <img src="imagenes/18%20bestialc%202013/03.jpg" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/04.jpg"> <img src="imagenes/18%20bestialc%202013/04.jpg"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/05.JPG">
-          <img src="imagenes/18%20bestialc%202013/05.JPG" alt="foto2"> </a> <a
-
-          href="imagenes/18%20bestialc%202013/06.JPG"> <img src="imagenes/18%20bestialc%202013/06.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/05.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/06.JPG"> <img src="imagenes/18%20bestialc%202013/06.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/07.JPG">
-          <img src="imagenes/18%20bestialc%202013/07.JPG" alt="foto2"> </a> <a
-
-          href="imagenes/18%20bestialc%202013/08.JPG"> <img src="imagenes/18%20bestialc%202013/08.JPG"
-
-            alt="foto1"> </a> <a href="imagenes/1988-1992/foto2.jpg">
-          <img src="imagenes/1988-1992/thumb/foto2.jpg" alt="foto2"> </a> <a href="imagenes/18%20bestialc%202013/11.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/11.JPG" alt="foto1">
-        </a> <a href="imagenes/18%20bestialc%202013/12.JPG"> <img
-
-            src="imagenes/18%20bestialc%202013/12.JPG" alt="foto2"> </a> <a href="imagenes/18%20bestialc%202013/13.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/13.JPG" alt="foto1">
-        </a> <a href="imagenes/18%20bestialc%202013/14.JPG"> <img
-
-            src="imagenes/18%20bestialc%202013/14.JPG" alt="foto2"> </a> <a href="imagenes/18%20bestialc%202013/15.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/15.JPG" alt="foto1">
-        </a> <a href="imagenes/18%20bestialc%202013/16.jpg"> <img
-
-            src="imagenes/18%20bestialc%202013/16.jpg" alt="foto2"> </a> <a href="imagenes/18%20bestialc%202013/17.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/17.JPG" alt="foto1">
-        </a> <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/18%20bestialc%202013/18.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/18.JPG" alt="foto2">
-        </a> <a href="imagenes/18%20bestialc%202013/19.JPG"> <img
-
-            src="imagenes/18%20bestialc%202013/19.JPG" alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/20.JPG"
-
-         > <img src="imagenes/18%20bestialc%202013/20.JPG" alt="foto2">
-        </a>
-        <a href="imagenes/18%20bestialc%202013/21.JPG"> <img src="imagenes/18%20bestialc%202013/21.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/07.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/08.JPG"> <img src="imagenes/18%20bestialc%202013/08.JPG"
+            alt="foto1"></a><a href="imagenes/18%20bestialc%202013/11.JPG"> <img
+            src="imagenes/18%20bestialc%202013/11.JPG" alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/12.JPG">
+          <img src="imagenes/18%20bestialc%202013/12.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/13.JPG"> <img src="imagenes/18%20bestialc%202013/13.JPG"
+            alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/14.JPG">
+          <img src="imagenes/18%20bestialc%202013/14.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/15.JPG"> <img src="imagenes/18%20bestialc%202013/15.JPG"
+            alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/16.jpg">
+          <img src="imagenes/18%20bestialc%202013/16.jpg" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/17.JPG"> <img src="imagenes/18%20bestialc%202013/17.JPG"
+            alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/18.JPG">
+          <img src="imagenes/18%20bestialc%202013/18.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/19.JPG"> <img src="imagenes/18%20bestialc%202013/19.JPG"
+            alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/20.JPG">
+          <img src="imagenes/18%20bestialc%202013/20.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/21.JPG"> <img src="imagenes/18%20bestialc%202013/21.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/22.JPG">
-          <img src="imagenes/18%20bestialc%202013/22.JPG" alt="foto2"> </a>
-        <a href="imagenes/18%20bestialc%202013/23.JPG"> <img src="imagenes/18%20bestialc%202013/23.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/22.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/23.JPG"> <img src="imagenes/18%20bestialc%202013/23.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/24.JPG">
-          <img src="imagenes/18%20bestialc%202013/24.JPG" alt="foto2"> </a>
-        <a href="imagenes/18%20bestialc%202013/25.JPG"> <img src="imagenes/18%20bestialc%202013/25.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/24.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/25.JPG"> <img src="imagenes/18%20bestialc%202013/25.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/26.JPG">
-          <img src="imagenes/18%20bestialc%202013/26.JPG" alt="foto2"> </a>
-        <a href="imagenes/18%20bestialc%202013/27.JPG"> <img src="imagenes/18%20bestialc%202013/27.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/26.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/27.JPG"> <img src="imagenes/18%20bestialc%202013/27.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/28.JPG">
-          <img src="imagenes/18%20bestialc%202013/28.JPG" alt="foto2"> </a>
-        <a href="imagenes/18%20bestialc%202013/29.JPG"> <img src="imagenes/18%20bestialc%202013/29.JPG"
-
+          <img src="imagenes/18%20bestialc%202013/28.JPG" alt="foto2"> </a> <a
+          href="imagenes/18%20bestialc%202013/29.JPG"> <img src="imagenes/18%20bestialc%202013/29.JPG"
             alt="foto1"> </a> <a href="imagenes/18%20bestialc%202013/30.JPG">
-          <img src="imagenes/18%20bestialc%202013/30.JPG" alt="foto2"> </a>
-       </section>
+          <img src="imagenes/18%20bestialc%202013/30.JPG" alt="foto2"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  <script src="js/lightbox.js"></script></body>
+    <script src="js/lightbox.js"></script>
+  </body>
 </html>
