--- a/imagenes ultrasons 2022.html
+++ b/imagenes ultrasons 2022.html
@@ -27,12 +27,12 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
@@ -47,46 +47,39 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>13º Ultrasons (2022)</h2>
-        <a href="imagenes/13%20ultrasons%202022/00.jpg"> <img src="imagenes/13%20ultrasons%202022/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/01.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/01.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20ultrasons%202022/02.jpg"> <img
-            src="imagenes/13%20ultrasons%202022/02.jpg" alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/03.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/03.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/04.jpg"> <img src="imagenes/13%20ultrasons%202022/04.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/05.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/05.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/06.jpg"> <img src="imagenes/13%20ultrasons%202022/06.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/07.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/07.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/08.jpg"> <img src="imagenes/13%20ultrasons%202022/08.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/09.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/09.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/10.jpg"> <img src="imagenes/13%20ultrasons%202022/10.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/11.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/11.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/12.jpg"> <img src="imagenes/13%20ultrasons%202022/12.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/13.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/13.jpg" alt="foto2">
-        </a>
-        <a href="imagenes/13%20ultrasons%202022/14.jpg"> <img src="imagenes/13%20ultrasons%202022/14.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/15.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/15.jpg" alt="foto2">
-        </a>
-        <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/13%20ultrasons%202022/16.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/16.jpg" alt="foto1">
-        </a> <a href="imagenes/13%20ultrasons%202022/17.jpg"> <img
-            src="imagenes/13%20ultrasons%202022/17.jpg" alt="foto2"> </a> <a href="imagenes/13%20ultrasons%202022/18.jpg"
-         > <img src="imagenes/13%20ultrasons%202022/18.jpg" alt="foto1">
-        </a> <a href="imagenes/13%20ultrasons%202022/19.jpg"> <img
-            src="imagenes/13%20ultrasons%202022/19.jpg" alt="foto2"> </a> </section>
+        <a href="imagenes/13%20ultrasons%202022/00.jpg"> <img src="imagenes/13%20ultrasons%202022/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/01.jpg">
+          <img src="imagenes/13%20ultrasons%202022/01.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/02.jpg"> <img src="imagenes/13%20ultrasons%202022/02.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/03.jpg">
+          <img src="imagenes/13%20ultrasons%202022/03.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/04.jpg"> <img src="imagenes/13%20ultrasons%202022/04.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/05.jpg">
+          <img src="imagenes/13%20ultrasons%202022/05.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/06.jpg"> <img src="imagenes/13%20ultrasons%202022/06.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/07.jpg">
+          <img src="imagenes/13%20ultrasons%202022/07.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/08.jpg"> <img src="imagenes/13%20ultrasons%202022/08.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/09.jpg">
+          <img src="imagenes/13%20ultrasons%202022/09.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/10.jpg"> <img src="imagenes/13%20ultrasons%202022/10.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/11.jpg">
+          <img src="imagenes/13%20ultrasons%202022/11.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/12.jpg"> <img src="imagenes/13%20ultrasons%202022/12.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/13.jpg">
+          <img src="imagenes/13%20ultrasons%202022/13.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/14.jpg"> <img src="imagenes/13%20ultrasons%202022/14.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/15.jpg">
+          <img src="imagenes/13%20ultrasons%202022/15.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/16.jpg"> <img src="imagenes/13%20ultrasons%202022/16.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/17.jpg">
+          <img src="imagenes/13%20ultrasons%202022/17.jpg" alt="foto2"> </a> <a
+          href="imagenes/13%20ultrasons%202022/18.jpg"> <img src="imagenes/13%20ultrasons%202022/18.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20ultrasons%202022/19.jpg">
+          <img src="imagenes/13%20ultrasons%202022/19.jpg" alt="foto2"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  <script src="js/lightbox.js"></script></body>
+    <script src="js/lightbox.js"></script>
+  </body>
 </html>
