--- a/imagenes opal.html
+++ b/imagenes opal.html
@@ -78,12 +78,11 @@
             alt="foto1"> </a> <a href="imagenes/opal%202012/27.JPG"> <img src="imagenes/opal%202012/27.JPG"
             alt="foto2"> </a> <a href="imagenes/opal%202012/28.JPG"> <img src="imagenes/opal%202012/28.JPG"
             alt="foto1"> </a> <a href="imagenes/opal%202012/29.JPG"> <img src="imagenes/opal%202012/29.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG"> <img src="imagenes/opal%202012/30.JPG"
-            alt="foto1">&nbsp;</a><a href="imagenes/opal%202012/31.jpg">&nbsp;</a><a
-          href="imagenes/opal%202012/32.JPG">&nbsp;</a><a href="imagenes/opal%202012/33.JPG">
-        </a> <a href="imagenes/opal%202012/35.JPG"> <img src="imagenes/opal%202012/35.JPG"></a><a
-          href="imagenes/opal%202012/32.JPG"><img src="imagenes/opal%202012/32.JPG"
-            alt="foto1"></a> </section>
+            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG"> <img src="imagenes/opal%202012/30.JPG"></a><a
+          href="imagenes/opal%202012/32.JPG"><img src="imagenes/opal%202012/32.JPG"></a><a
+          href="imagenes/opal%202012/33.JPG"><img src="imagenes/opal%202012/33.JPG"></a><a
+          href="imagenes/opal%202012/35.JPG"><img src="imagenes/opal%202012/35.JPG"></a><a
+          href="imagenes/opal%202012/30.JPG"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
