--- a/index.htm
+++ b/index.htm
@@ -55,23 +55,19 @@
       </ul>
     </nav>
     <div style="text-align: center;">
-      <main class="contenido"><span style="color: yellow;"><br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-        </span>
-        <section class="memoria"> <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz"
-
-            class="foto-memoria">
-          <p class="texto-memoria"> <span style="color: yellow;">En memoria de<br>
-              Antonio "Bici" Díaz.<br>
-              D.E.P. </span></p>
-        </section>
-      </main>
+      <main class="contenido" style="display: flex; flex-direction: column; align-items: center;">
+  <span style="color: yellow;"><br><br><br><br><br><br><br><br></span>
+  <section class="memoria">
+    <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz" class="foto-memoria">
+    <p class="texto-memoria">
+      <span style="color: yellow;">
+        En memoria de<br>
+        Antonio "Bici" Díaz.<br>
+        D.E.P.
+      </span>
+    </p>
+  </section>
+</main>
     </div>
   </body>
 </html>
