--- a/index.htm
+++ b/index.htm
@@ -12,16 +12,13 @@
             margin: 0;
         }
         body {
-    margin: 0;
-    height: 100vh;               /* ocupamos exactamente la ventana */
-    background: #000 url("imagenes/_MG_5152b.jpg") no-repeat center center/cover;
-    background-attachment: fixed;  /* fija la imagen al viewport */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 3vh;
-    overflow: hidden;              /* evita scroll accidental del body */
-}
+            background: #000 url("imagenes/_MG_5152b.jpg") no-repeat center/cover;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 3vh;
+        }
       
         /* Sección memoria */
         .memoria {
