--- a/index.htm
+++ b/index.htm
@@ -12,13 +12,15 @@
             margin: 0;
         }
         body {
-            background: #000 url("imagenes/_MG_5152b.jpg") no-repeat center/cover;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 3vh;
-        }
+    background: #000 url("imagenes/_MG_5152b.jpg") no-repeat top center / cover;
+    height: 100dvh; /* Soluciona el recorte en móviles rotados */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3vh;
+}
+
       
         /* Sección memoria */
         .memoria {
