--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,12 @@
     align-items: center;
     padding-top: 3vh;
 }
+ @media (orientation: landscape) {
+      body {
+        background-position: top center !important;
+        height: 100dvh;
+      }
+    }
 
       
         /* Sección memoria */
