--- a/index.htm
+++ b/index.htm
@@ -35,10 +35,19 @@
             border: 3px solid #ff0000;
         }
         .texto-memoria {
-            margin-top: 1rem;
-            font-size: 1.1rem;
-            line-height: 1.4;
-        }
+    margin-top: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.4;
+
+    /* Fondo semitransparente */
+    background: rgba(0, 0, 0, 0.55);
+    padding: 0.8rem 1.2rem;
+    border-radius: 12px;
+
+    /* Para mejorar lectura en móviles */
+    backdrop-filter: blur(2px);
+    display: inline-block;
+}
       
     </style>
   </head>
