--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@
     </nav>
     <div style="text-align: center;">
       <main class="contenido" style="display: flex; flex-direction: column; align-items: center;">
-  <span style="color: yellow;"><br><br><br><br><br><br><br><br></span>
+  <span style="color: yellow;"><br></span>
   <section class="memoria">
     <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz" class="foto-memoria">
     <p class="texto-memoria">
