--- a/biografia.htm
+++ b/biografia.htm
@@ -24,8 +24,8 @@
     <main class="contenido"><img src="imagenes/grupo1a.jpg" alt=""><br>
       <br>
       Corría el año 1988 e internet era prácticamente un pensamiento futurista.
-      Me refiero exactamente a que, menos el fútbol de 2ª regional y las veladas
-      pugilísticas de Estudio 17 (no te digo na´), todo lo demás en esa época
+      Me refiero exactamente a que, menos el fútbol de 2ª&nbsp;regional y las veladas
+      pugilísticas de Estudio&nbsp;17 (no te digo na´), todo lo demás en esa época
       era bastante aburrido en domingo.<br>
       <br>
       Menos mal que por encima de todo se encontraba lo que realmente había
@@ -48,7 +48,7 @@
       <br>
       <main class="contenido">
         <p class="center big rojo"></p>
-        <h3>Había nacido...</h3>
+        <h3>Había&nbsp;nacido...</h3>
         <p><br>
         </p>
         <h1><span style="color: red;"><b><strong>1ª&nbsp;Komunión</strong></b></span></h1>
@@ -113,17 +113,17 @@
         varios festivales, hasta que en 2020, por motivos de salud, nuestro
         compañero Antonio Díaz "Bici" ya no pudo acompañarnos con su voz.<br>
         Teniendo un último concierto pendiente, se puso a la voz Jesús "El
-        Madri" Gallardo, y a la batería su hijo Ferrán Gallardo.<br>
+        Madri" Gallardo, y a la batería su hijo Ferrán&nbsp;Gallardo.<br>
         <br>
-        Poco después, en 2022, la voz y el alma de nuestro sonido, Antonio
-        "Bici", nos dejó prematuramente. Todavía hoy en día, nos es difícil de
+        Poco después, en 2022, la voz y el alma de nuestro sonido, Antonio&nbsp;"Bici", 
+		nos dejó prematuramente. Todavía hoy en día, nos es difícil de
         imaginar que no está entre nosotros. <br>
         <br>
-        Ese mismo año, en el 13º Festival Ultrasons, decidimos hacer un último
+        Ese mismo año, en el 13º&nbsp;Festival&nbsp;Ultrasons, decidimos hacer un último
         concierto como homenaje a nuestro compañero y amigo "Bici", teniendo
         nuevamente a Jesús a la voz y a Ferrán a la batería, con la colaboración
-        de Carlos Medina a la guitarra, y los cameos de Toni "X-Fanekaes" y J.L.
-        Lorente "El Xino" cantando un par de temas.<br>
+        de Carlos&nbsp;Medina a la guitarra, y los cameos de Toni&nbsp;"X-Fanekaes" y 
+		J.L.&nbsp;Lorente&nbsp;"El&nbsp;Xino" cantando un par de temas.<br>
         <br>
         Y... a día de hoy cada uno sigue con la vida que tiene. Sin más. <br>
         Queremos dar las gracias a todos aquellos que han querido siempre que
